@@ -1,3 +1,8 @@
+2006-09-13  Andras Varga
+
+	* cconfig.h: getAsFilenames() enhancement: if directory name contains 
+	spaces, adds quotation marks.
+
 2006-03-19  Andras Varga
 
 	* csimul.h: added method guessNextEvent() for use from Tkenv.
